[gd_scene load_steps=9 format=3 uid="uid://31u4570g3q17"]

[ext_resource type="Script" path="res://scripts/Weapon.gd" id="1_d1yyx"]
[ext_resource type="PackedScene" uid="uid://bajon4wl502d1" path="res://scenes/weapons/grenade.tscn" id="2_m744f"]
[ext_resource type="Texture2D" uid="uid://dj47mnktkpau5" path="res://assets/Spritesheet/onlyObjects_default.png" id="3_7mh7o"]
[ext_resource type="Texture2D" uid="uid://dk0jpus34dk5a" path="res://assets/PNG/weapon_silencer.png" id="3_fcqxg"]

[sub_resource type="Animation" id="Animation_56nst"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_mj1et"]
resource_name = "explosion"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 1]
}

[sub_resource type="Animation" id="Animation_3sddm"]
resource_name = "muzzle_flash"
length = 0.07
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.07),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.07),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 1.2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eygrr"]
_data = {
"RESET": SubResource("Animation_56nst"),
"explosion": SubResource("Animation_mj1et"),
"muzzle_flash": SubResource("Animation_3sddm")
}

[node name="Weapon" type="Node2D"]
script = ExtResource("1_d1yyx")
Projectile = ExtResource("2_m744f")
precision = 0.3

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_fcqxg")

[node name="FirePosition" type="Marker2D" parent="."]
position = Vector2(18, 4.48227e-05)

[node name="FireDirection" type="Marker2D" parent="."]
position = Vector2(20, 4.48227e-05)

[node name="AttackCoolDown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="MuzzleFlash" type="Sprite2D" parent="."]
visible = false
position = Vector2(28, 4.48227e-05)
rotation = -1.5708
texture = ExtResource("3_7mh7o")
region_enabled = true
region_rect = Rect2(324, 334, 20, 25)

[node name="Animation" type="AnimationPlayer" parent="."]
root_node = NodePath("../MuzzleFlash")
libraries = {
"": SubResource("AnimationLibrary_eygrr")
}
